--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -30,6 +30,16 @@
 
     <!-- Template Stylesheet -->
     <link href="{% static 'style.css' %}" rel="stylesheet">
+    <style>
+.aiman {
+        margin: 0 15px 15px 0;
+        background:#F4F6F8;
+        float:left;
+        padding: 10px;
+        width:430px;
+        height:500px;
+        }
+</style>
 </head>
 
 <body>
@@ -114,12 +124,41 @@
  
 
     <!-- Blog Start -->
-    <div class="container-fluid py-6 px-5">
-        <!-- <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 text-uppercase mb-4">Latest <span class="text-primary">Articles</span> From Our Blog Post</h1>
-        </div> -->
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Все новости</button>
+    </li>
+    <li class="nav-item" role="presentation">
+    <button class="nav-link" id="urgent-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Срочные</button>
+    </li>
+    <li class="nav-item" role="presentation">
+    <button class="nav-link" id="oftheday-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Новость дня</button>
+    </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="all-tab">
+        <div class="container-fluid py-6 px-5">
         <div class="row g-5">
-            <div class="aiman"></div>
+            <div class="allnews"></div>
+        </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="urgent-tab">
+        <div class="container-fluid py-6 px-5">
+        <div class="row g-5">
+            <div class="urgentnews"></div>
+        </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="oftheday-tab">
+        <div class="container-fluid py-6 px-5">
+        <div class="row g-5">
+            <div class="ofthedaynews"></div>
+        </div>
+        </div>
+    </div>
+    </div>
+
 
             <script>
 
@@ -127,33 +166,64 @@
                     $.get("http://127.0.0.1:8000/api/post/", function(data, status){
                         for(let i=0;i<(data.count);i++){
                             let div = document.createElement('div');
-                            div.className="col-lg-4 col-md-6"
+                            div.className="col-lg-4 col-md-6 aiman"
         
                             div.innerHTML=`
                             <div class="bg-light">
-        <img class="img-fluid" src="${data.results[i].image}" alt="">
-        <div class="p-4">
-            <div class="d-flex justify-content-between mb-4">
-                <div class="d-flex align-items-center">
+                            <img class="img-fluid" style="width:410px; height:260px;" src="${data.results[i].image}" alt="">
+                            <div class="p-4">
+                            <div class="d-flex justify-content-between mb-4">
+                            <div class="d-flex align-items-center">
                 
-                    <span>${data.results[i].text_author}</span>
-                </div>
-                <div class="d-flex align-items-center">
-                    <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>${data.results[i].date_post}</span>
-                </div>
-            </div>
+                            <span>${data.results[i].text_author}</span>
+                            </div>
+                            <div class="d-flex align-items-center">
+                            <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>${data.results[i].date_post}</span>
+                            </div>
+                            </div>
 
 
-            <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="${data.results[i].type_name} ">
- <h4 class="text-uppercase mb-3">${data.results[i].title} </h4></span>
+                            <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="${data.results[i].type_name} ">
+                            <h4 class="text-uppercase mb-3">${data.results[i].title} </h4></span>
 
-            <a class="text-uppercase fw-bold" href="">Read More <i class="bi bi-arrow-right"></i></a>
-        </div>
-    </div>
-                        `
-        
+                           <!-- <div class="accordion" id="accordionExample">
+                              <div class="accordion-item">
+                                <h2 class="accordion-header" id="heading">
+                                  <button class="text-uppercase fw-bold accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Читать
+                                  </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne4" data-bs-parent="#accordionExample">
+                                  <div class="accordion-body">
+                                    <strong> ${data.results[i].text} По умолчанию оно скрыто, пока плагин сворачивания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+                                  </div>
+                                </div>
+                              </div>
+                            </div>-->
+
+                            <p>
+                              <a class="text-uppercase fw-bold" data-bs-toggle="collapse" href="#collapseExample${data.results[i].id}" role="button" aria-expanded="false" aria-controls="collapseExample${data.results[i].id}">
+                                Читать
+                              </a>
+                            </p>
+                            <div class="collapse" id="collapseExample${data.results[i].id}">
+                              <div class="card card-body">
+                                ${data.results[i].text}
+                              </div>
+                            </div>
+
+
+
+                            </div>
+                            </div>
+                            `
                             console.log(data.results[i]);
-                            document.querySelector('.aiman').append(div)
+                            if (data.results[i].type == 1)
+                            {
+                            document.querySelector('.urgentnews').append(div);}
+                            else if(data.results[i].type == 2)
+                            {document.querySelector('.ofthedaynews').append(div);}
+                            else {document.querySelector('.allnews').append(div);}
                         }
                     })
                 });
@@ -167,29 +237,28 @@
 
 
 
-            <div class="col-12">
-                <nav aria-label="Page navigation">
-                  <ul class="pagination pagination-lg justify-content-center m-0">
-                    <li class="page-item disabled">
-                      <a class="page-link rounded-0" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                      <a class="page-link rounded-0" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    </li>
-                  </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
+<!--            <div class="col-12">-->
+<!--                <nav aria-label="Page navigation">-->
+<!--                  <ul class="pagination pagination-lg justify-content-center m-0">-->
+<!--                    <li class="page-item disabled">-->
+<!--                      <a class="page-link rounded-0" href="#" aria-label="Previous">-->
+<!--                        <span aria-hidden="true">&laquo;</span>-->
+<!--                        <span class="sr-only">Previous</span>-->
+<!--                      </a>-->
+<!--                    </li>-->
+<!--                    <li class="page-item active"><a class="page-link" href="#">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+<!--                    <li class="page-item">-->
+<!--                      <a class="page-link rounded-0" href="#" aria-label="Next">-->
+<!--                        <span aria-hidden="true">&raquo;</span>-->
+<!--                        <span class="sr-only">Next</span>-->
+<!--                      </a>-->
+<!--                    </li>-->
+<!--                  </ul>-->
+<!--                </nav>-->
+<!--            </div>-->
+
     <!-- Blog End -->
     
 
@@ -217,53 +286,19 @@
                         <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Главная</a>
-                            <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a> -->
-                            <!-- <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a> -->
                         </div>
                     </div>
-                    <!-- <div class="col-sm-6">
-                        <h4 class="text-white text-uppercase mb-4">Popular Links</h4>
-                        <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                            <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                        </div>
-                    </div> -->
-                    <!-- <div class="col-sm-12">
-                        <h4 class="text-white text-uppercase mb-4">Newsletter</h4>
-                        <div class="w-100">
-                            <div class="input-group">
-                                <input type="text" class="form-control border-light" style="padding: 20px 30px;" placeholder="Your Email Address"><button class="btn btn-primary px-4">Sign Up</button>
-                            </div>
-                        </div>
-                    </div> -->
+
                 </div>
             </div>
         </div>
     </div>
-    <!-- <div class="container-fluid bg-dark bg-light-radial text-white border-top border-primary px-0">
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="py-4 px-5 text-center text-md-start">
-                <p class="mb-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. All Rights Reserved.</p>
-            </div>
-            <div class="py-4 px-5 bg-primary footer-shape position-relative text-center text-md-end">
-                <p class="mb-0">Designed by <a class="text-dark" href="https://htmlcodex.com">HTML Codex</a></p>
-            </div>
-        </div>
-    </div> -->
-    <!-- Footer End -->
+
 
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-
-    <!-- JavaScript Libraries -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
