--- a/blog/templates/error.html
+++ b/blog/templates/error.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -51,14 +53,14 @@
     <div class="container-fluid sticky-top bg-dark bg-light-radial shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg bg-dark bg-light-radial navbar-dark py-3 py-lg-0">
             <a href="{% url 'index' %}" class="navbar-brand">
-                <h1 class="m-0 display-4 text-uppercase text-white">НОВОСТИ</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">{% trans 'НОВОСТИ' %}</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="{% url 'signin' %}" class="nav-item nav-link">Повторная авторизация</a>
+                    <a href="{% url 'signin' %}" class="nav-item nav-link">{% trans 'Повторная авторизация' %}</a>
 
                     <!-- <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <a href="" class="nav-item nav-link bg-primary text-white px-5 ms-3 d-none d-lg-block">Get A Quote <i class="bi bi-arrow-right"></i></a> -->
@@ -68,7 +70,7 @@
 
             <div class="container-fluid page-header">
                 <div class="d-inline-flex text-white">
-                    <h6 class="text-uppercase m-0"><a href="">Пользователя не существует, <a href="{% url 'signin' %}" class="nav-item nav-link">попробуйте еще раз</a></a></h6>
+                    <h6 class="text-uppercase m-0"><a href="">{% trans 'Пользователя не существует,' %} <a href="{% url 'signin' %}" class="nav-item nav-link">{% trans 'попробуйте еще раз' %}</a></a></h6>
                 </div>
             </div>
 
