--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -51,8 +52,8 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Наш офис</h6>
-                        <span>123 Street, New York, USA</span>
+                        <h6 class="text-uppercase fw-bold">{% trans "Наш офис" %}</h6>
+                        <span>{% trans "123 Street, New York, USA" %}</span>
                     </div>
                 </div>
             </div>
@@ -60,7 +61,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Почта</h6>
+                        <h6 class="text-uppercase fw-bold">{% trans "Почта" %}</h6>
                         <span>info@example.com</span>
                     </div>
                 </div>
@@ -69,7 +70,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Телефон для связи</h6>
+                        <h6 class="text-uppercase fw-bold">{% trans "Телефон для связи" %}</h6>
 
                         <span>+012 345 6789</span>
                     </div>
@@ -84,17 +85,17 @@
     <div class="container-fluid sticky-top bg-dark bg-light-radial shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg bg-dark bg-light-radial navbar-dark py-3 py-lg-0">
             <a href="{% url 'index' %}" class="navbar-brand">
-                <h1 class="m-0 display-4 text-uppercase text-white">НОВОСТИ</h1>
+                <h1 class="m-0 display-4 text-uppercase text-white">{% trans "НОВОСТИ" %}</h1>
             </a>
             
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="{% url 'signin' %}" class="nav-item nav-link">Авторизация (только для редакторов)</a>
+                    <a href="{% url 'signin' %}" class="nav-item nav-link">{% trans "Авторизация (только для редакторов)" %}</a>
                 </div>
                 {% if user.is_authenticated %}
 
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="{% url 'post_add' %}" class="nav-item nav-link">Добавить пост</a>
+                    <a href="{% url 'post_add' %}" class="nav-item nav-link">{% trans "Добавить пост" %}</a>
                 </div>
                 {% endif %}
             </div>
@@ -107,7 +108,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
         <div class="d-inline-flex text-white">
-            <h6 class="text-uppercase m-0"><a href="">Свежие новости каждый день</a></h6>
+            <h6 class="text-uppercase m-0"><a href="">{% trans "Свежие новости каждый день" %}</a></h6>
         </div>
     </div>
     <!-- Page Header Start -->
@@ -116,13 +117,13 @@
     <!-- Blog Start -->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Все новости</button>
+    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">{% trans "Обычные новости" %}</button>
     </li>
     <li class="nav-item" role="presentation">
-    <button class="nav-link" id="urgent-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Срочные</button>
+    <button class="nav-link" id="urgent-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">{% trans "Срочные" %}</button>
     </li>
     <li class="nav-item" role="presentation">
-    <button class="nav-link" id="oftheday-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Новость дня</button>
+    <button class="nav-link" id="oftheday-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">{% trans "Новость дня" %}</button>
     </li>
     </ul>
     <div class="tab-content" id="myTabContent">
@@ -185,7 +186,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne4" data-bs-parent="#accordionExample">
                                   <div class="accordion-body">
-                                    <strong> ${data.results[i].text} По умолчанию оно скрыто, пока плагин сворачивания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+                                    <strong> ${data.results[i].text} {% trans "По умолчанию оно скрыто, пока плагин сворачивания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение." %}
                                   </div>
                                 </div>
                               </div>
@@ -193,7 +194,7 @@
 
                             <p>
                               <a class="text-uppercase fw-bold" data-bs-toggle="collapse" href="#collapseExample${data.results[i].id}" role="button" aria-expanded="false" aria-controls="collapseExample${data.results[i].id}">
-                                Читать
+                                {% trans 'Читать' %}
                               </a>
                             </p>
                             <div class="collapse" id="collapseExample${data.results[i].id}">
@@ -237,10 +238,10 @@
 <!--        <div class="row g-5">-->
 <!--            <div class="col-lg-6 pe-lg-5">-->
                 <a href="{% url 'index' %}" class="navbar-brand">
-                    <h1 class="m-0 display-4 text-uppercase text-white">НОВОСТИ</h1>
+                    <h1 class="m-0 display-4 text-uppercase text-white">{% trans 'НОВОСТИ' %}</h1>
                 </a>
                 
-                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
+                <p><i class="fa fa-map-marker-alt me-2"></i>{% trans '123 Street, New York, USA' %}</p>
                 <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
                 <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
 
